--- a/chatbot.ipynb
+++ b/chatbot.ipynb
@@ -386,7 +386,7 @@
     "list_validation_loss_error = []\n",
     "early_stopping_check = 0\n",
     "early_stopping_stop = 1000\n",
-    "checkpoint = \"chatbot_weights.ckpt\" # For Windows users, replace this line of code by: checkpoint = \"./chatbot_weights.ckpt\"\n",
+    "checkpoint = \"./chatbot_weights.ckpt\"\n",
     "session.run(tf.global_variables_initializer())\n",
     "for epoch in range(1, epochs + 1):\n",
     "    for batch_index, (padded_questions_in_batch, padded_answers_in_batch) in enumerate(split_into_batches(training_questions, training_answers, batch_size)):\n",
